fixed order and alignment issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,4 +14,9 @@
  *= require_self
  */
 
+label.checkbox-inline.no-indent {
+    margin-left: 0px;
+    margin-right: 10px;
+}
+
 @import "bootstrap"
